// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot 1`] = `
<div>
  <div
    className="css-132hx50"
  >
    <span />
  </div>
  <div
    className="SplitPane vertical"
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <div
      className="Pane vertical pane1"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "overflow": "auto",
          "position": "relative",
          "width": 280,
        }
      }
    >
      <div
        className="side"
      >
        <div
          className="menuContainer"
        >
          <div
            className="menuHeader"
          >
            <h2>
              Hello!
            </h2>
          </div>
          <input
            className="searchField form-control"
            onChange={[Function]}
            placeholder="Filter..."
            type="text"
            value=""
          />
          <div
            className="menu"
          >
            <div
              className="menuNode"
            >
              <span
                className="rootMenuItem menuItemWithoutRef"
              >
                Loading...
              </span>
              <div />
            </div>
          </div>
          <div
            className="menuFooter"
          >
            <img
              src={Object {}}
            />
          </div>
        </div>
        <hr />
        <h3>
          Settings
        </h3>
        <div
          className="languageBox"
        >
          <div
            className="languageList"
          />
        </div>
        <div
          className="roleBox"
        />
      </div>
    </div>
    <span
      className="Resizer vertical"
      onMouseDown={[Function]}
    />
    <div
      className="Pane vertical pane2"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflow": "auto",
          "position": "relative",
        }
      }
    >
      <div
        className="document-content"
        id="document-content___MainDocument"
      >
        <div
          className="document-loader "
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshot 2`] = `
<div>
  <div
    className="css-132hx50"
  >
    <span />
  </div>
  <div
    className="SplitPane vertical"
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "100%",
        "left": 0,
        "outline": "none",
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <div
      className="Pane vertical pane1"
      style={
        Object {
          "flex": "none",
          "outline": "none",
          "overflow": "auto",
          "position": "relative",
          "width": 280,
        }
      }
    >
      <div
        className="side"
      >
        <div
          className="menuContainer"
        >
          <div
            className="menuHeader"
          >
            <h2>
              Hello!
            </h2>
          </div>
          <input
            className="searchField form-control"
            onChange={[Function]}
            placeholder="Filter..."
            type="text"
            value=""
          />
          <div
            className="menu"
          >
            <div
              className="menuNode"
            >
              <span
                className="rootMenuItem menuItemWithoutRef"
              >
                Loading...
              </span>
              <div />
            </div>
          </div>
          <div
            className="menuFooter"
          >
            <img
              src={Object {}}
            />
          </div>
        </div>
        <hr />
        <h3>
          Settings
        </h3>
        <div
          className="languageBox"
        >
          <div
            className="languageList"
          />
        </div>
        <div
          className="roleBox"
        />
      </div>
    </div>
    <span
      className="Resizer vertical"
      onMouseDown={[Function]}
    />
    <div
      className="Pane vertical pane2"
      style={
        Object {
          "flex": 1,
          "outline": "none",
          "overflow": "auto",
          "position": "relative",
        }
      }
    >
      <div
        className="document-content"
        id="document-content___MainDocument"
      >
        <div
          className="staticPage"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
